--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -45,7 +45,7 @@ University of Southern California}
 
 \singlespacing
 \begin{abstract}
-\noindent This paper estimates the large array of long-run benefits of an influential early childhood program targeted to disadvantaged children and their families. It is evaluated by random assignment and follows participants through their mid-30s. The program is a prototype for numerous interventions currently in place around the world. It has substantial positive effects on (a) health and the quality of life, (b) the labor incomes of participants, (c) crime, (d) education, and (e) the earnings of the mothers of the participants through subsidizing their childcare. There are substantially greater monetized benefits for males. The overall rate of return is a statistically significant: 12\% per annum. The benefit/cost ratio is 5.7. These estimates account for the welfare costs of taxation to finance the program. They survive a variety of sensitivity analyses. Accounting for substitutes to treatment available to the experimental control group shows that boys benefit much less than girls from low quality alternative childcare.
+\noindent This paper estimates the large array of long-run benefits of an influential early childhood program targeted to disadvantaged children and their families. It is evaluated by random assignment and follows participants through their mid-30s. The program is a prototype for numerous interventions currently in place around the world. It has substantial positive effects on (a) health and the quality of life, (b) the labor incomes of participants, (c) crime, (d) education, and (e) the earnings of the mothers of the participants through subsidizing their childcare. There are substantially greater monetized benefits for males. The overall rate of return is a statistically significant 12\% per annum with an associated benefit/cost ratio of 5.7. These estimates account for the welfare costs of taxation to finance the program. They survive a variety of sensitivity analyses. Accounting for substitutes to treatment available to the experimental control group shows that boys benefit much less than girls from low quality alternative childcare.
 \end{abstract}
 
 \noindent \textbf{Keywords}: Childcare, early childhood education, gender differences in responses to programs, health, long-term predictions, quality of life, randomized trials, substitution bias \\
@@ -84,25 +84,25 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 
 \section{Introduction}
 
-This paper documents the large array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children. The program has substantial impacts on the lives of participants. Monetizing benefits and costs across multiple domains, we estimate a rate of return of 12\% per annum and a benefit/cost ratio of 5.7 with substantial differences across genders, favoring males.
+This paper documents the large array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children. The program has substantial impacts on the lives of participants. Monetizing benefits and costs across multiple domains, we estimate a rate of return of 12\% per annum and a benefit/cost ratio of 5.7. There are substantial differences across genders favoring males.
 
 Our analysis contributes to a growing literature on the value of early programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term evidence on their effectiveness is surprisingly limited.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_RateofReturn,Heckman_Moon_etal_2010_QE}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report only a limited set of early age outcomes like IQ or scores on school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2016_QJE} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} Yet it is the long-term costs and benefits that are relevant for policy analysis.
 
-We analyze the benefits from two virtually identical early childhood programs evaluated by randomized trials conducted in North Carolina. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) -- henceforth ABC/CARE. Both were launched in the 1970s and have long-term follow-ups through age 34. The programs started early (at 8 weeks of life) and engaged participants to age 5. We analyze their impacts on a variety of life outcomes such as health, the quality of life,\footnote{Throughout this paper, \textit{we refer to health-related quality of life as quality of life}. It is the weight attached to each year of life as a function of disease burden, as we detail further below.} participation in crime, labor income, IQ, schooling, and increases parental earnings arising from subsidized childcare.\footnote{The income we observe is aggregated across the parents. Only 27\% of the mothers lived with a couple at baseline, so we refer to the gain in parental income as a gain in mother's labor income.}
+We analyze the benefits from two virtually identical early childhood programs evaluated by randomized trials conducted in North Carolina. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) -- henceforth ABC/CARE. Both were launched in the 1970s and have long-term follow-ups through age 34. The programs started early (at 8 weeks of life) and engaged participants to age 5. We analyze their impacts on a variety of life outcomes such as health, the quality of life,\footnote{Throughout this paper, \textit{we refer to health-related quality of life as quality of life}. It is the weight attached to each year of life as a function of disease burden, as we detail further below.} participation in crime, labor income, IQ, schooling, and increased parental earnings arising from subsidized childcare.\footnote{The income we observe is aggregated across the parents. Only 27\% of the mothers lived with a couple at baseline, so we refer to the gain in parental income as a gain in mother's labor income.}
 
 Evidence from these programs is relevant for contemporary policy discussions because their main components are present in a variety of current interventions.\footnote{Programs inspired by ABC/CARE have been (and are being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are, with years launched and locations in parentheses: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} About 19\% of all African-American children are eligible for the program today.\footnote{43\% of African-American children were eligible in 1972.}
 
 Analyzing the benefits of a program with a diverse array of outcomes across multiple domains and periods of life is both challenging and rewarding. Doing so highlights the numerous ways through which early childhood programs enhance adult capabilities. We use a variety of methodologies to characterize program benefits. Instead of reporting only individual treatment effects or categories of treatment effects, our benefit/cost analyses account for all aspects of the program, including the welfare costs of taxes to publicly finance the program. We display the sensitivity of our estimates excluding various components of costs and benefit.\footnote{\cite{Barnett_Masse_2002_benefitcost,Barnett_Masse_2007_EER} present a cost/benefit analysis for ABC through age 21, before many benefits are realized. They report a benefit/cost ratio of 2.5, but give no standard error or sensitivity analyses for their estimate. They do not disaggregate by gender. For want of the data collected on health at age 34, they do not account for health benefits. They use self-reported crime data (unlike the administrative crime data later collected that we analyze) and ignore the welfare costs of financing the program. We use cost data from primary sources not available to them.}
 
-A fundamental problem in evaluating any human capital intervention is assessing its out-of-sample future benefits. Most solutions to this problem are based on versions of a synthetic cohort approach using the outcomes of older cohorts comparable to treated and control persons to proxy future treatment effects.\footnote{\cite{Mincer_1974_schooling} addresses this problem using a synthetic cohort approach and provides evidence on its validity. See the discussion of the synthetic cohort approach in \cite{Heckman_Lochner_ea_2006_HEE}.} Using this approach, we combine experimental data through age 34 with information from multiple auxiliary panel data sources to predict benefits and costs over the lifetimes of participants.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} provide a valuable discussion of data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g., \citealp{Prentice_1989_Surrogate_SiM}).}
+A fundamental problem in evaluating any intervention is assessing its out-of-sample future benefits. Most solutions to this problem are based on versions of a synthetic cohort approach using the outcomes of older cohorts comparable to treated and control persons to proxy future treatment effects.\footnote{\cite{Mincer_1974_schooling} addresses this problem using a synthetic cohort approach and provides evidence on its validity. See the discussion of the synthetic cohort approach in \cite{Heckman_Lochner_ea_2006_HEE}.} Using this approach, we combine experimental data through age 34 with information from multiple auxiliary panel data sources to predict benefits and costs over the lifetimes of participants.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} provide a valuable discussion of data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g., \citealp{Prentice_1989_Surrogate_SiM}).}
 
 Our analysis is simplified by the finding that all eligible families offered participation in the program take the offer. This motivates a revealed preference approach to constructing synthetic control groups. We develop a synthetic treatment group drawing on the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}. They show that program treatment effects are produced through changes in inputs in a stable (across treatment regimes) production function for outcomes. We use the estimated production function to make out-of-sample predictions based on inputs caused by treatment.
 
-We simultaneously account for sampling uncertainty from combining data, estimating parameters of behavioral equations, and simulating models. We conduct sensitivity analyses for outcomes for which sampling uncertainty is not readily quantified. Our approach to combining multiple data sets and analyzing blocks of outcomes is of interest in its own right as a template for evaluating other programs with numerous long-run outcomes using intermediate outcome measures.
+We account for sampling uncertainty arising from combining data, estimating parameters of behavioral equations, and simulating models. We conduct sensitivity analyses for outcomes for which sampling uncertainty is not readily quantified. Our approach to combining multiple data sets and analyzing blocks of outcomes is of interest in its own right as a template for evaluating other programs with numerous long-run outcomes using intermediate outcome measures.
 
-Our analysis accounts for control group substitution.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.} Roughly 75\% of the control-group children in ABC/CARE enroll in some form of lower quality alternative childcare centers.\footnote{We refer to alternatives as alternative childcare or alternative preschool centers. See Appendix~\ref{appendix:background} for a precise description of these alternatives.} We define and estimate parameters accounting for the choices taken by the control groups in our study. We find pronounced gender differences in treatment effects comparing high quality treatment with lower quality alternatives. Males benefit much less from alternative childcare when compared with females, a result consistent with the literature on the vulnerability of male children when removed from their mothers, even for short periods.\footnote{See \citet{Kottelenberg-Lehrer_2014_Gender-Effects,Autor-etal_2015_Family-Disadvantage,Baker_Gruber_Milligan_2015_Noncog_Defects}.}
+Our analysis accounts for control group substitution.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.} Roughly 75\% of the control-group children in ABC/CARE enroll in some form of lower quality alternative childcare centers.\footnote{We refer to alternatives as alternative childcare or alternative preschool centers. See Appendix~\ref{appendix:background} for a precise description of these alternatives.} We define and estimate parameters accounting for the choices taken by the control groups in our study. We find pronounced gender differences in treatment effects comparing high quality treatment with lower quality alternatives. Males benefit much less from alternative market childcare arrangements compared to females, a result consistent with the literature on the vulnerability of male children when removed from their mothers, even for short periods.\footnote{See \citet{Kottelenberg-Lehrer_2014_Gender-Effects,Autor-etal_2015_Family-Disadvantage,Baker_Gruber_Milligan_2015_Noncog_Defects}.}
 
-We contribute to the literature on the effectiveness of early childhood programs by considering their long-term benefits on health. We estimate the savings in life-cycle medical costs and improvements in the quality of life.\footnote{\cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} show the substantial adult (age 34) health benefits of ABC but do not present a cost/benefit analysis of their results.} We also find substantial childcare benefits that promote work by the mothers of participants, and additional benefits for participants in terms of reduced crime, gains in life-cycle labor income, reduced special education costs and enhanced educational attainment.
+We contribute to the literature on the effectiveness of early childhood programs by considering their long-term benefits on health. We estimate the savings in life-cycle medical costs and improvements in the quality of life.\footnote{\cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} show the substantial adult (age 34) health benefits of ABC but do not present a cost/benefit analysis of their results.} We find substantial childcare benefits that promote work by the mothers of participants, and additional benefits for participants in terms of reduced crime, gains in life-cycle labor income, reduced special education costs and enhanced educational attainment.
 
 Figure~\ref{figure:main} summarizes the main findings of this paper. It displays the discounted (by a 3\% discount rate) life-cycle benefits of the program and costs (in 2014 USD) for a pooled sample of male and female participants, both overall and disaggregated by category. Costs are substantial, as has frequently been noted by critics.\footnote{See, e.g., \citet{Whitehurst_2014_Senate_Testimony} and \citet{Fox_News_2014_Head_Start_Effects}.} But so are the benefits, which far outweigh the costs.
 
@@ -116,11 +116,11 @@ Note: This figure displays the life-cycle net present values per program partici
 *QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions until predicted death, with $\$150,000$ (2014 USD) as base value for a year of life.\\}
 \end{sidewaysfigure}
 
-The rest of the paper justifies and interprets these estimates. We proceed in the following way. Section~\ref{section:background} discusses the ABC/CARE interventions. Section~\ref{section:methodsquestions} presents our notation and the definitions of the treatment effects estimated in this paper. Section~\ref{section:methodology} discusses our approaches to inference for vectors of treatment effects. We use combining functions that summarize the \emph{number} of beneficial outcomes, as well as the number of statistically significant beneficial outcomes. Section~\ref{section:c-functions} reports estimated treatment effects.
+The rest of the paper justifies and interprets these estimates. We proceed in the following way. Section~\ref{section:background} discusses the ABC/CARE intervention. Section~\ref{section:methodsquestions} presents our notation and the definitions of the treatment effects estimated in this paper. Section~\ref{section:methodology} discusses our approaches to inference for vectors of treatment effects. We use combining functions that summarize the \emph{number} of beneficial outcomes, as well as the number of statistically significant beneficial outcomes. 
 
-We summarize multiple program treatment effects using benefit/cost and rate of return analyses, which give economically interpretable summaries of the program and its components. Section~\ref{section:cbamethodology} presents our approaches for predicting life-cycle outcomes and evidence supporting the assumptions underlying it. Section~\ref{section:cbaresults} reports our estimates of benefit/cost ratios and rates of return.
+Section~\ref{section:c-functions} reports estimated treatment effects. We summarize multiple program treatment effects using benefit/cost and rate of return analyses, which give economically interpretable summaries of the program and its components. Section~\ref{section:cbamethodology} presents our approaches for predicting life-cycle outcomes and evidence supporting the assumptions underlying it. Section~\ref{section:cbaresults} reports our estimates of benefit/cost ratios and rates of return.
 
-Section~\ref{section:conclusion} summarizes the paper. There are substantial benefits that differ by gender. Girls benefit across more domains. However, the monetized value of the treatment effects is substantially greater for boys. This discrepancy is largely driven by labor income and health benefits, as well as reduced crime for males. Males benefit much less than females from being placed in lower quality alternative early childcare programs, compared to remaining with their mothers at home.
+Section~\ref{section:conclusion} summarizes the paper. There are substantial benefits that differ by gender. Girls benefit across more domains. However, the monetized value of the estimated treatment effects is substantially greater for boys. This discrepancy is largely driven by labor income and health benefits, as well as reduced crime for males. Males benefit much less than females from being placed in lower quality alternative early childcare programs, compared to remaining with their mothers at home.
 
 \section[Background and Data Sources]{Background and Data Sources} \label{section:background}
 
@@ -159,7 +159,7 @@ For both programs, from birth until the age of 8, data were collected annually o
 
 \subsection{Randomization Protocol and Compromises} \label{section:randomization}
 
-Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups.\footnote{For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program.} Randomization pairing was based on a risk index, maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} ABC collected an initial sample of 122 subjects. We characterize each missing observation in Appendix~\ref{appendix:background}. In Appendix~\ref{appendix:attrition}, we document that our estimates are robust when we adjust for missing data using standard methods. We conduct the same analysis for the CARE sample. 22 subjects in ABC did not stay in the program through age 5. Dropouts are evenly balanced and are primarily related to health of child and mobility of families and not to dissatisfaction with the program.\footnote{The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. Any dropouts occur \emph{after} randomization.}
+Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups.\footnote{For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program.} Randomization pairing was based on a risk index, maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} ABC collected an initial sample of 122 subjects. We characterize each missing observation in Appendix~\ref{appendix:background}. In Appendix~\ref{appendix:attrition}, we document that our estimates are robust when we adjust for missing data using standard methods. We conduct the same analysis for the CARE sample. 22 subjects in ABC did not stay in the program through age 5. Dropouts are evenly balanced and are primarily related to the health of the child and mobility of families and not to dissatisfaction with the program.\footnote{The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. Any dropouts occur \emph{after} randomization.}
 
 \subsection{Control Group Substitution}
 
@@ -238,7 +238,7 @@ It is also useful to assess the average effectiveness of a program relative to a
 \bm{\Delta}_t \left( V =1 \right) : =   \mathbb{E} \left[ \bm{Y}^1_t - \bm{Y}^0_t | V = 1, W = 1 \right] := \mathbb{E} \left[\bm{Y}^1_t - \bm{Y}^0_{t,C} | V = 1, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 
-Random assignment to treatment does not directly identify \eqref{eq:influenza} or \eqref{eq:smallpox}. Econometric methods are required to identify these parameters. We characterize the determinants of choices and our strategy for controlling for selection into ``H'' and ``C'' below.\footnote{Appendix~\ref{appendix:vsensitivity} displays results with alternative definitions of $V$ (i.e., different thresholds define if a child attended alternative preschool). The results are robust to the various definitions.}
+Random assignment to treatment does not directly identify \eqref{eq:influenza} or \eqref{eq:smallpox}. Econometric methods are required to identify these parameters. We characterize the determinants of choices and our strategy for controlling for selection into ``$H$'' and ``$C$'' below.\footnote{Appendix~\ref{appendix:vsensitivity} displays results with alternative definitions of $V$ (i.e., different thresholds define if a child attended alternative preschool). The results are robust to the various definitions.}
 
 \section{Summarizing Multiple Treatment Effects} \label{section:methodology}
 
@@ -246,7 +246,7 @@ ABC/CARE has rich longitudinal data on multiple outcomes over multiple periods o
 
 Consider a block of $N_l$ outcomes indexed by set $Q_l = \{1,\dots,N_l\}$. Let $j \in Q_l$ be a particular outcome within block $l$. Associated with it is a mean treatment effect
 \begin{equation}
-\Delta_{j,t} : = \mathbb{E} \left[ Y^1_{j,t} - Y^0_{j,t} | \bm{B} \in \mathcal{B}_0 \right].
+\Delta_{j,t} : = \mathbb{E} \left[ Y^1_{j,t} - Y^0_{j,t} | \bm{B} \in \mathcal{B}_0 \right], j \in Q_l.
 \end{equation}
 
 We assume that outcomes can be ordered so that $\Delta_{j,t} >0$ is beneficial.\footnote{All but 5\% of the outcomes we study can be ranked in this fashion. See Appendix~\ref{appendix:results} for a discussion.} We summarize the estimated effects of the program on outcomes within the block by the number of positive counts within block $l$:
@@ -267,11 +267,11 @@ We account for control group substitution using a variety of econometric procedu
 
 \subsection{Estimated Treatment Effects}
 
-Table~\ref{table:tescombined} presents the following estimates. Column (1) gives the mean difference between treatment and control groups. Column (2) adjusts the difference for attrition and controls for background variables. Both are estimates of the parameter defined in \eqref{eq:effect}. Column (3) shows the mean difference between treatment- and the control-group children who did not attend alternatives. Column (4) gives matching estimates for \eqref{eq:influenza}. Column (5) gives mean differences between treatment- and control-group children who attended alternatives. Column (6) gives matching estimates for \eqref{eq:smallpox}.
+Table~\ref{table:tescombined} presents the following estimates. Column (1) gives mean differences by outcomes between treatment and control groups. Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in \eqref{eq:effect}. Column (3) shows the mean difference between treatment- and the control-group children who did not attend alternatives. Column (4) gives matching estimates for the parameter defined in Equation~\eqref{eq:influenza}. Column (5) gives mean differences between treatment- and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of Equation~\eqref{eq:smallpox}.
 
 The results for girls show that ABC/CARE had effects on employment and labor incomes of participants as adults, high school graduation, years of education, and the income of the participants' parents. It reduces participant arrests. These results strengthen when we compare treatment with the alternative of staying exclusively at home.
 
-The results for boys are somewhat different. Treated subjects reported lower drug use and blood pressure. There are also effects on labor income and education. The results for employment, hypertension, and blood pressure are strengthened when comparing the treatment group to those subjects who attend alternative childcare centers. Separation from the mother and being placed in relatively low quality childcare centers have far more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects}.} The results hold under alternative definitions of take up of alternatives by control-group children (see Appendix~\ref{appendix:vsensitivity}).
+The results for boys are somewhat different. Treated subjects reported lower drug use and blood pressure. There are also effects on labor income and education. The results for employment, hypertension, and blood pressure are strengthened when comparing the treatment group to those subjects who attend alternative childcare centers. Separation from the mother and being placed in relatively low quality childcare centers have far more deleterious consequences for girls than for boys.\footnote{This is consistent with the evidence in \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects}.} The results hold under alternative definitions of take up of alternatives by control-group children (see Appendix~\ref{appendix:vsensitivity}).
 
 \newgeometry{top=.6in, bottom=.8in, left=.8in, right=.8in}
 \begin{table}[!htbp]
@@ -283,7 +283,7 @@ The results for boys are somewhat different. Treated subjects reported lower dru
 \end{scriptsize}
 \begin{tablenotes}
 \tiny
-Note: This table shows the treatment effects for categories outcomes that are important for our benefit/cost analysis. Systolic and diastolic blood pressure are measured in terms of mm Hg. Each column present estimates for the following parameters: \textbf{(1)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | W = 1]$; {\textbf{(2)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B} \big]$}; {\textbf{(3)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=0, D=0 \big]$}; {\textbf{(4)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=0 \big] $}; {\textbf{(5)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=1, D = 0 \big]$}; {\textbf{(6)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=1 \big]$}. We account for the following background variables ($\bm{B}$): Apgar scores at minutes 1 and 5 and the high-risk index. We define the high-risk index in Appendix~\ref{appendix:background} and explain how we choose the control variables in Appendix~\ref{appendix:bvariables}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.
+Note: This table shows the treatment effects for categories outcomes that are important for our benefit/cost analysis. Systolic and diastolic blood pressure are measured in terms of mm Hg. Each column present estimates for the following parameters: \textbf{(1)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | W = 1]$; {\textbf{(2)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B} \big]$}; {\textbf{(3)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=0, D=0 \big]$}; {\textbf{(4)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=0 \big] $}; {\textbf{(5)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=1, D = 0 \big]$}; {\textbf{(6)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=1 \big]$}. We account for the following background variables ($\bm{B}$): Apgar scores at minutes 1 and 5 and the high-risk index. We define the high-risk index in Appendix~\ref{appendix:background} and explain how we choose the control variables in Appendix~\ref{appendix:bvariables}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level. \textbf{[Typist: Professor, there are currently minuses in the correct spot, although it might be hard to see in the printed version.]}
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -296,7 +296,7 @@ We next report estimates of the proportion of beneficial effects by block and ov
 
 Using an $\alpha$-level of significance, one would expect to find that $\alpha\%$ of the treatment effects are ``statistically significant,'' even if the null hypothesis of no effect of the program is true simply by chance. For a 10\% level of significance, $46\%$ are statistically significant for females and $28\%$ for males (see Figure~\ref{fig:ppositive10}).
 
-Figures~\ref{fig:ppositivehome} and Figure~\ref{fig:ppositivealternative} adjust the count in Figure~\ref{fig:ppositivenb} to analyze more clearly defined counterfactuals: treatment compared to staying at home and treatment compared to alternative preschool. This comparison indicates that girls and boys benefit differently from alternatives to high quality treatment. As is the case for the treatment effects reported in Table~\ref{table:tescombined}, girls benefit more from treatment compared to staying at home while males benefit more from treatment compared to attending an alternative childcare arrangement, but not compared to staying at home. Girls benefit much less from lower quality alternative child care arrangements than boys.\footnote{These results are consistent with the analysis of \citet{Rutter_1972_Maternal-Deprivation}, who shows that at early ages, males are more adversely affected than females by absence of the mother.}
+Figures~\ref{fig:ppositivehome} and Figure~\ref{fig:ppositivealternative} adjust the count in Figure~\ref{fig:ppositivenb} to analyze more clearly defined counterfactuals: treatment compared to staying at home and treatment compared to alternative preschool. This comparison indicates that girls and boys benefit differently from alternatives to high quality treatment. As is the case for the treatment effects reported in Table~\ref{table:tescombined}, girls benefit more from treatment compared to staying at home while males benefit more from treatment compared to attending an alternative childcare arrangement, but not compared to staying at home.
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -451,7 +451,7 @@ For all $t, t'' \in \{ 1, \ldots, T \}$,
 Under Assumptions~\ref{ass:exog} and \ref{ass:exogne}, a prediction of $Y^d_{j,t}$ for the experimental sample based on \eqref{eq:outcomenonexp} is valid under a structural invariance assumption. That is, \eqref{eq:outcomenonexp} is valid under the assumption that the dynamic economic relationships in \eqref{eq:outcome} and \eqref{eq:outcomenonexp} are not affected by cohort effects or any other potential shifters of the economic relationships between $\left( \bm{X}_{t}, \bm{B} \right)$ and $Y_{t,j}$ not captured by $\bm{X}^d_t, \bm{B}$. Formally,
 
 \onehalfspacing
-\begin{assumption}\label{ass:invariance} \textbf{Structural Invariance} \\
+\begin{assumption}\label{ass:invariance} \textbf{Structural Invariance Out of the Experimental Sample} \\
 \noindent For any  $\left( \bm{X}^d_{t}, \bm{B} \right)$,
 \begin{equation}
 \phi_{j,t} \left( \bm{X}^d_{t}, \bm{B} \right) = \widetilde{\phi}_{j,t} \left( \bm{X}^d_{t}, \bm{B} \right), \quad d \in \{0,1\}
