changes from heckman 10/24

--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -305,7 +305,7 @@ Note: This figure displays the predicted labor income profile obtained when cons
 
 \subsection{Testing  Assumptions~\ref{ass:summary} and~\ref{ass:invariance}} \label{app:invariance}
 
-\noindent In this section we provide tests for Assumptions~\ref{ass:summary} and ~\ref{ass:invariance}. These assumptions, together with Assumptions~\ref{ass:exog} and ~\ref{ass:exogne}, imply the following null hypotheses. We test Assumptions~\ref{ass:summary} and ~\ref{ass:invariance} in this subsection and Assumptions~\ref{ass:exog} and ~\ref{ass:exogne} in the next.
+\noindent In this section we provide tests for Assumptions~\ref{ass:summary} and ~\ref{ass:invariance}. These assumptions, together with Assumptions~\ref{ass:exog} and ~\ref{ass:congruence}, imply the following null hypotheses. We test Assumptions~\ref{ass:summary} and ~\ref{ass:invariance} in this subsection and Assumptions~\ref{ass:exog} and ~\ref{ass:congruence} in the next.
 
 \begin{eqnarray}
 \phi_{j,t}^0 \left( \bm{X}_{t}^d, \bm{B} \right) &=& \phi_{j,t}^1 \left( \bm{X}_{t}^1 \right) \\ \nonumber
@@ -795,9 +795,9 @@ Note: This figure displays the predicted labor income profile obtained when cons
 \end{sidewaystable}
 
 
-\subsection{Testing  Assumptions~\ref{ass:exog} and ~\ref{ass:exogne}} \label{app:endogeneity}
+\subsection{Testing  Assumptions~\ref{ass:exog} and ~\ref{ass:congruence}} \label{app:endogeneity}
 
-\noindent We use the following framework to test Assumptions~\ref{ass:exog} and ~\ref{ass:exogne}. Let
+\noindent We use the following framework to test Assumptions~\ref{ass:exog} and ~\ref{ass:congruence}. Let
 
 \begin{align}\label{eq:sa-msystemmain}
 \bm{M}_{t}^d &= \bm{\lambda}^d \bm{\theta}_{t}^d +  \bm{\upsilon}_t^d   \nonumber \\
