cleaning the mess of two worlds

--- a/preamble.tex
+++ b/preamble.tex
@@ -94,6 +94,8 @@
 %Math Environments
 \newtheorem{theorem}{Theorem}
 \newtheorem{claim}{Claim}
+\newtheorem{condition}{Condition}
+\renewcommand\thecondition{C--\arabic{condition}}
 \newtheorem{algorithm}{Algorithm}
 \newtheorem{assumption}{Assumption}
 \renewcommand\theassumption{A--\arabic{assumption}}
@@ -101,7 +103,6 @@
 \newtheorem{hypothesis}[theorem]{Hypothesis}
 \newtheorem{property}[theorem]{Property}
 \newtheorem{example}[theorem]{Example}
-\newtheorem{condition}[theorem]{Condition}
 \newtheorem{result}[theorem]{Result}
 \newenvironment{proof}{\textbf{Proof:}}{$\bullet$}
 
